# quadrature

./: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
scripts/: .catkin_workspace  Motor_Control.py  Qnode.py  Qnode.py~  Quadnode.py  Range_Finder.py  example.py  quadrature.py  quadrature.py~  quadratureNew.py
