<?xml version="1.0"?>
<package>
  <name>quadrature</name>
  <version>0.0.0</version>
  <description>The quadrature package</description>

  <maintainer email="tylera93@vt.edu">Tyler Atzingen</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/quadrature</url>
  <author email="tylera93@vt.edu">Tyler Atzingen</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
